# ParG4_cluster

./: README  README.md
LYSO/: CMakeLists.txt  GNUmakefile  LYSO.cc  ParGNUmakefile  dependencies.txt  performance.txt  procgroup  vis.mac
LYSO/AnnotatedFiles/: G4HCofThisEvent.hh  G4HCofThisEvent.msh  G4String.msh  G4THitsCollection.hh  G4THitsCollection.msh  G4VHitsCollection.hh  G4VHitsCollection.msh  MarshaledG4HCofThisEvent.h  MarshaledG4String.h  MarshaledG4THitsCollection.h  MarshaledG4VHitsCollection.h
LYSO/include/: G4MTGetTid.hh  GNUmakefile  LYSOEventAction.hh  LYSOGeometry.hh  LYSOHit.hh  LYSOHit.msh  LYSOPhysicsList.hh  LYSOPrimaryGeneratorAction.hh  LYSORunAction.hh  LYSOSD.hh  MarshaledLYSOHit.h
LYSO/src/: G4MTGetTid.cc  LYSOEventAction.cc  LYSOGeometry.cc  LYSOHit.cc  LYSOPhysicsList.cc  LYSOPrimaryGeneratorAction.cc  LYSORunAction.cc  LYSOSD.cc
analisys/: CompareWrapping.C
